# Rust-Challenges

./: README.md
discord-chatbot/discord-api/: Cargo.toml
discord-chatbot/discord-api/src/: config.rs  discord.rs  error.rs  main.rs
discord-chatbot/discord-bot/: Cargo.toml
discord-chatbot/discord-bot/src/: main.rs
faucet-bot/: Cargo.toml  README.md
faucet-bot/src/: main.rs
json-parser/src/: lib.rs  main.rs
json-parser/tests/: 3.json  4.json  5.json
