[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serenity = { version = "0.11.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
dotenv = { version="0.15.0" }